ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: awesome-class
  annotations: 
    storageclass.kubernetes.io/is-default-class: "true"
spec:
  controller: ingress.k8s.aws/alb
