service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dockercli
  labels:
    app: dockerapp
spec:
  selector:
    app: dockerapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
